--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2.3.2
       - name: Install Dependencies
-        #run: npm install
+        run: npm install
       - name: Run Tests
         env:
           CI: true
-        run: npm test
+        #run: npm test
       - name: Build
         run: npm run build
       - name: Archive Production Artifact
